# Flask-Server-Template

./: README.md  config.py  main.py  pyproject.toml  render.py
templates/: index.html
